--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,18 @@
+
+
+
 {
   "hosting": {
-    "public": "build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+  "public": "build",
+  "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+  "rewrites": [
+  {
+  "source": "**",
+  "destination": "/index.html"
   }
-}
+  ]
+  }
+  }
+
+
+ 
